# pyhina

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/pyhina/: __init__.py  renderer.py
src/pyhina/templates/setuptools/{{project_name}}/: pyproject.toml.j2  setup.cfg.j2
src/pyhina/templates/setuptools/{{project_name}}/src/{{package_name}}/: __init__.py.j2
tests/: test_renderer.py
