[metadata]
name = pyhina
version = attr: pyhina.__version__
description = Python package template project
licence = MIT

[options]
python_requires = >=3.8, <4
package = find:
package_dir = 
    = src

[options.packages.find]
where = src

[options.extras_require]
develop = 
    black
    flake8
    isort

test = 
    tox

[flake8]
exclude = build,.git/*,.tox/*
max-line-length = 88
